fix(chat-bubble): normalizing svg sizes and hiding chat overflow

--- a/src/src/Dialog/Dialog.scss
+++ b/src/src/Dialog/Dialog.scss
@@ -32,6 +32,7 @@
     padding-right: 1em;
     animation: 500ms slideIn ease;
     
+    overflow: hidden;
     border-width: 2em;
     border-style: solid;
     border-image-slice: 3 fill;
